gcc/testsuite/rust/compile/lookup_err1.rs
fn test() {
    fn nested() {}
}

fn main() {
    nested(); // { dg-error "Cannot find path .nested. in this scope" }
}
